tests/Tuc/Fixtures/errors/WrongEvent-post.tuc
tuc parse error test
participants
    GenericService parts
    [InputStream] parts

GenericService
    Wrong -> [InputStream]
